--- a/MyNewChatApplication/MyNewChatApplication/MyNewChatApplication.csproj
+++ b/MyNewChatApplication/MyNewChatApplication/MyNewChatApplication.csproj
@@ -178,6 +178,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\ChatHub.cs" />
+    <Compile Include="Hubs\HitCounter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
